fixed  maize image not showing fixed padding on mobile

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -114,6 +114,8 @@ main {
         border: 1px solid rgba(255, 255, 255, 0.2);
         border-radius: 1.2rem;
       }
+      padding: 0.8rem;
+      background-color: #efeeee;
       .item {
         height: fit-content;
         margin: 0.8rem 0;
